Changed checksum commands from shasum to sha256 for REHL compatibility

--- a/tasks/download.yml
+++ b/tasks/download.yml
@@ -32,9 +32,7 @@
   changed_when: false
   register: java_oracle_redis_exists
   local_action: command
-    shasum
-      --algorithm 256
-      --portable
+    sha256sum
       --check
       --status
       {{ util_persistent_data_path_local }}/java.sha256sum
@@ -46,9 +44,7 @@
   changed_when: false
   register: java_oracle_redis_jce_exists
   local_action: command
-    shasum
-      --algorithm 256
-      --portable
+    sha256sum
       --check
       --status
       {{ util_persistent_data_path_local }}/java_jce.sha256sum
@@ -118,9 +114,7 @@
   tags: java
   when: java_oracle_redis_download|changed
   local_action: command
-    shasum
-      --algorithm 256
-      --portable
+    sha256sum
       --check
       --status
       {{ util_persistent_data_path_local }}/java.sha256sum
@@ -129,9 +123,7 @@
   tags: java
   when: java_oracle_redis_jce_download|changed
   local_action: command
-    shasum
-      --algorithm 256
-      --portable
+    sha256sum
       --check
       --status
       {{ util_persistent_data_path_local }}/java_jce.sha256sum
